--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "code-step-by-step-gif",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@codemirror/lang-javascript": "^6.1.2",
-    "@uiw/codemirror-theme-dracula": "^4.19.6",
-    "@uiw/react-codemirror": "^4.19.6",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@vitejs/plugin-react": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-standard-with-typescript": "^27.0.1",
-    "eslint-plugin-import": "^2.27.4",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.0",
-    "postcss": "^8.4.21",
-    "prettier": "2.8.2",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.0"
-  }
+    "name": "code-step-by-step-gif",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "tailwind-watch": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch",
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@monaco-editor/react": "^4.4.6",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "html2canvas": "^1.4.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@typescript-eslint/eslint-plugin": "^5.48.1",
+        "@vitejs/plugin-react": "^3.0.0",
+        "autoprefixer": "^10.4.13",
+        "eslint": "^8.31.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-config-standard-with-typescript": "^27.0.1",
+        "eslint-plugin-import": "^2.27.4",
+        "eslint-plugin-n": "^15.6.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.32.0",
+        "postcss": "^8.4.21",
+        "prettier": "2.8.2",
+        "prettier-plugin-tailwindcss": "^0.2.1",
+        "tailwindcss": "^3.2.4",
+        "typescript": "^4.9.4",
+        "vite": "^4.0.0"
+    }
 }
