--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
         "@monaco-editor/react": "^4.4.6",
         "eslint-plugin-react-hooks": "^4.6.0",
         "html2canvas": "^1.4.1",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.191",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "@typescript-eslint/eslint-plugin": "^5.48.1",
