--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
     "type": "module",
     "scripts": {
         "tailwind-watch": "npx tailwindcss -i ./src/index.css -o ./dist/output.css --watch",
-        "dev": "vite",
+        "dev": "vite --host",
         "build": "tsc && vite build",
         "preview": "vite preview"
     },
     "dependencies": {
         "@monaco-editor/react": "^4.4.6",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "html2canvas": "^1.4.1",
+        "ffmpeg.js": "^4.2.9003",
+        "html-to-image": "^1.11.4",
+        "imgur": "^2.2.0",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@types/ffmpeg.js": "^3.1.3",
         "@types/lodash": "^4.14.191",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
