--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "@monaco-editor/react": "^4.4.6",
         "eslint-plugin-react-hooks": "^4.6.0",
         "ffmpeg.js": "^4.2.9003",
-        "html-to-image": "^1.11.4",
+        "html2canvas": "^1.4.1",
         "imgur": "^2.2.0",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
