--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ffmpeg/core": "^0.11.0",
+        "@ffmpeg/ffmpeg": "^0.11.6",
         "@monaco-editor/react": "^4.4.6",
         "eslint-plugin-react-hooks": "^4.6.0",
         "ffmpeg-static": "^5.1.0",
@@ -18,7 +20,8 @@
         "imgur": "^2.2.0",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "vite-plugin-cross-origin-isolation": "^0.1.6"
     },
     "devDependencies": {
         "@types/ffmpeg.js": "^3.1.3",
